--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartCargo">
-        <activity android:name=".AddNewOrder"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MajorViews.RegisterUser"></activity>
+        <activity android:name=".MajorViews.Details" />
+        <activity android:name=".MajorViews.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MajorViews.AddNewOrder" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
