--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartCargo">
-        <activity android:name=".MajorViews.RegisterUser"></activity>
+        <activity android:name=".MajorViews.Ack"></activity>
+        <activity android:name=".MajorViews.HomePage" />
+        <activity android:name=".MajorViews.RegisterUser" />
         <activity android:name=".MajorViews.Details" />
         <activity android:name=".MajorViews.LoginActivity">
             <intent-filter>
@@ -19,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MajorViews.AddNewOrder" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MajorViews.MainActivity" />
     </application>
 
 </manifest>
